# hexlet-flask-example

./: Makefile  Procfile  README.md  example.py  pyproject.toml  users.json
static/css/: style.css
templates/users/: base.html  edit.html  form.html  index.html  login_form.html  login_users.html  show.html
